--- a/client/pages/add_pet.html
+++ b/client/pages/add_pet.html
@@ -1,5 +1,38 @@
 <template name="addPet">
 
+  <div class="container">
 
+      <div class="row">
+          <div class="box">
+              <div class="col-lg-12">
+                  <hr>
+                  <h2 class="intro-text text-center">
+                  	Add a Pet
+                  </h2>
+                  <hr>
+                  <p>
+                  	{{> dropzone url='http://somewebsite.com/upload' id='dropzoneDiv'}}
+                  </p>
+                  <form role="form" id="addPetForm">
+                      <div class="row">
+                          <div class="form-group col-lg-4">
+                              <label>Name</label>
+                              <input name="name" type="text" class="form-control">
+                          </div>
+                          <div class="form-group col-lg-4">
+                              <label>Age</label>
+                              <input name="age" class="form-control">
+                          </div>
+                          <div class="form-group col-lg-12">
+                              <button type="submit" id="contactFormSubmitButton" class="btn btn-default">Submit</button>
+                          </div>
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+
+  </div>
+  <!-- /.container -->
 
 </template>
