commit to go back to master

--- a/client/application/layout.html
+++ b/client/application/layout.html
@@ -1,6 +1,9 @@
 <template name="layout">
 
-{{> header}}
-{{> yield}}
+	{{> header}}
+
+	<div class="top-padding">
+		{{> yield}}
+	</div>
 
 </template>
