--- a/client/pages/add_pet.html
+++ b/client/pages/add_pet.html
@@ -27,7 +27,7 @@
                               <input name="age" class="form-control">
                           </div>
                           <div class="form-group col-lg-12">
-                              <button type="submit" id="contactFormSubmitButton" class="btn btn-default">Submit</button>
+                              <button type="submit" id="addPetSubmitButton" class="btn btn-default">Submit</button>
                           </div>
                       </div>
                   </div>
