added dog profile page

--- a/client/application/layout.html
+++ b/client/application/layout.html
@@ -1,9 +1,8 @@
 <template name="layout">
 
 	{{> header}}
-
-	<div class="top-padding">
+	<div class="top-padding"></div>
 		{{> yield}}
-	</div>
+
 
 </template>
