--- a/client/pages/pet_profile.html
+++ b/client/pages/pet_profile.html
@@ -1,6 +1,18 @@
 <template name="petProfile">
+<div class="container">
+  <h2>{{name}}, {{age}}</h2>
+  <div class="owl-carousel">
+    <div class="item"> <img src="{{img_url}}"> </div>
+    <div class="item"> <img src="{{img_url}}"> </div>
+    <div class="item"> <img src="{{img_url}}"> </div>
+    <div class="item"> <img src="{{img_url}}"> </div>
+    <div class="item"> <img src="{{img_url}}"> </div>
+    <div class="item"> <img src="{{img_url}}"> </div>
+  </div>
+  <div class="center-button">
+    <div class="btn btn-success">Adopt me!</div>
+  </div>
 
-<h2>{{name}}</h2>
-<h2>{{age}}</h2>
+</div>
 
 </template>
