added functions to add pets and users

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -1,7 +1,7 @@
 <template name="index">
 
   <div id="app">
-    <div id="people"></div>
+    <div id="pets"></div>
     <div id="control">
       <div class="button no">
         <a href="#" class="trigger"></a>
