dynamically generates image carousel, fixed dropzone double bug

--- a/client/pages/pet_profile.html
+++ b/client/pages/pet_profile.html
@@ -1,14 +1,13 @@
 <template name="petProfile">
 <div class="container">
   <h2>{{name}}, {{age}}</h2>
+  
   <div class="owl-carousel">
-    <div class="item"> <img src="{{img_url}}"> </div>
-    <div class="item"> <img src="{{img_url}}"> </div>
-    <div class="item"> <img src="{{img_url}}"> </div>
-    <div class="item"> <img src="{{img_url}}"> </div>
-    <div class="item"> <img src="{{img_url}}"> </div>
-    <div class="item"> <img src="{{img_url}}"> </div>
+    {{#each petImagesArray}}
+    <div class="item"> <img src="{{this}}"></div>
+    {{/each}}
   </div>
+  
   <div class="center-button">
     <div class="btn btn-success">Adopt me!</div>
   </div>
