changed swipe icons

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -3,16 +3,12 @@
   <div id="app">
     <div id="pets"></div>
     <div id="control">
-      <div class="button no">
-        <a href="#" class="trigger"></a>
+      <div class="row swipe-icons">
+        <div class="col-xs-4 nope"><span class="glyphicon glyphicon-remove"></span></div>
+        <div class="col-xs-4 info-sign"><span class="glyphicon glyphicon-info-sign"></span></div>
+        <div class="col-xs-4 heart"><span class="glyphicon glyphicon-heart"></span></div>
       </div>
-      <div class="button info">
-        <a href="#" class="trigger"></a>
-      </div>
-      <div class="button yes">
-        <a href="#" class="trigger"></a>
-      </div>
-  </div>
+    </div>
  </div>
 
 </template>
