--- a/client/main.html
+++ b/client/main.html
@@ -6,4 +6,5 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
   <title>Woofder</title>
+  <link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
 </head>
