--- a/client/pages/mydogs.html
+++ b/client/pages/mydogs.html
@@ -3,7 +3,7 @@
     {{#each adoptees}}
       <div class="mydogs">
       	<h2>{{name}}</h2>
-      	<h2>{{age}}</h2>
+      	<h2>{{imageIds}}</h2>
         <!-- <a href="{{pathFor 'petProfile'}}"><img src="{{img_url}}"></a> -->
       </div>
     {{/each}}
