--- a/client/pages/mydogs.html
+++ b/client/pages/mydogs.html
@@ -3,12 +3,9 @@
     {{#each adoptees}}
       <div class="mydogs">
       	<h2>{{name}}</h2>
-      	<h2>{{imageIds}}</h2>
-        <a href="{{pathFor 'petProfile'}}"><img src="{{imageUrl}}"></a>
+      	<h2>{{age}}</h2>
+        <a href="/pets/{{_id}}"><img src="{{imageUrl}}"></a>
       </div>
     {{/each}}
-<!--     {{#each petImagesArray}}
-			<h2>{{this}}</h2>
-    {{/each}} -->
   </div>
 </template>
