--- a/client/application/layout.html
+++ b/client/application/layout.html
@@ -7,7 +7,7 @@
     {{#if currentUser}}
 		  {{> yield}}
     {{else}}
-			<h1 class="logo-home">WOOFDER</h1>
+			<div class="logo-home"><img src="/img/logo-home.png"></div>
       {{> loginButtons}}
     {{/if}}
 	</div>
