--- a/client/main.html
+++ b/client/main.html
@@ -6,7 +6,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
   <title>Woofder</title>
-  <link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="apple-touch-icon" href="img/logo.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
