--- a/client/pages/add_pet.html
+++ b/client/pages/add_pet.html
@@ -26,6 +26,14 @@
                               <label>Age</label>
                               <input name="age" class="form-control">
                           </div>
+                          <div class="form-group col-lg-4">
+                              <label>Description</label>
+                              <input name="about" type="text" class="form-control">
+                          </div>
+                          <div class="form-group col-lg-4">
+                              <label>Location</label>
+                              <input name="location" type="text" class="form-control">
+                          </div>
                           <div class="form-group col-lg-12">
                               <button type="submit" id="addPetSubmitButton" class="btn btn-default">Submit</button>
                           </div>
