New homepage icons

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -4,9 +4,9 @@
     <div id="pets"></div>
     <div id="control">
       <div class="row swipe-icons">
-        <div class="col-xs-4 nope"><span class="glyphicon glyphicon-remove"></span></div>
+        <div class="col-xs-4 nope"><img src="img/bones.png"></div>
         <div class="col-xs-4 info-sign"><span class="glyphicon glyphicon-info-sign"></span></div>
-        <div class="col-xs-4 heart"><span class="glyphicon glyphicon-heart"></span></div>
+        <div class="col-xs-4 heart"><img src="img/paw.png"></div>
       </div>
     </div>
  </div>
