added handlebars to display pet location and description in profile

--- a/client/pages/pet_profile.html
+++ b/client/pages/pet_profile.html
@@ -11,12 +11,12 @@
   <section class="about-me">
     <h3 class="descriptionh3">Description</h3>
     <article class="description">
-      <p>Hi, my name is {{name}} and I'm {{age}} years old. I was found homeless {{stay}} years ago.  I am healthy and happy and looking for a new home.</p>
+      <p>Hi, my name is {{name}} and I'm {{age}} years old. {{about}}</p>
     </article>
 
     <h3 class="descriptionh3">Location</h3>
     <article class="description">
-      <p>I'm currently staying in the Hong Kong SPCA in Wan Chai</p>
+      <p>I'm currently staying in the Hong Kong SPCA in {{location}}.</p>
     </article>
   </section>
 
