--- a/client/pages/test.html
+++ b/client/pages/test.html
@@ -1,7 +1,17 @@
 <template name="test">
 
 
-
+<div id="draggable" class="ui-widget-content">
+  <p>I revert when I'm dropped</p>
+</div>
+ 
+<div id="draggable2" class="ui-widget-content">
+  <p>I revert when I'm not dropped</p>
+</div>
+ 
+<div id="droppable" class="ui-widget-header">
+  <p>Drop me here</p>
+</div>
 
 
 
