got test drag and drop to work

--- a/client/pages/test.html
+++ b/client/pages/test.html
@@ -1,16 +1,23 @@
 <template name="test">
 
+<div class="col-lg-12">
+	
+	<div id="reject" class="ui-widget-header col-lg-3">
+	  <i class="fa fa-times-circle fa-4x"></i>
+	</div>
 
-<div id="draggable" class="ui-widget-content">
-  <p>I revert when I'm dropped</p>
-</div>
- 
-<div id="draggable2" class="ui-widget-content">
-  <p>I revert when I'm not dropped</p>
-</div>
- 
-<div id="droppable" class="ui-widget-header">
-  <p>Drop me here</p>
+<!-- 	<div id="draggable" class="ui-widget-content">
+	  <p>I revert when I'm dropped</p>
+	</div> -->
+	 
+	<div id="draggable2" class="ui-widget-content col-lg-6">
+	  <p>DOGGIE IMAGE HERE</p>
+	</div>
+	 
+	<div id="accept" class="ui-widget-header col-lg-3">
+	  <i class="fa fa-check-circle fa-4x"></i>
+	</div>
+
 </div>
 
 
