Home pics draggable

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -1,7 +1,7 @@
 <template name="index">
 
   <div id="app">
-    <div id="pets"></div>
+    <div id="pets" class="draggable2"></div>
     <div id="control">
       <div class="row swipe-icons">
         <div class="col-xs-4 nope"><img src="img/bones.png"></div>
